<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/question_mark">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button1"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_1"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_2"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignRight="@+id/button6"
        android:background="@drawable/button_1"
        android:layout_toRightOf="@+id/button2" />


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:background="@drawable/button_2"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toStartOf="@+id/button5" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_1"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button6"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button5"
        android:background="@drawable/button_2"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:background="@drawable/button_1"
        android:layout_toLeftOf="@+id/button8"
        android:layout_toStartOf="@+id/button8" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button8"
        android:background="@drawable/button_2"
        android:layout_alignTop="@+id/button7"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textColor="#fff000"
        android:id="@+id/button9"
        android:background="@drawable/button_1"
        android:layout_alignTop="@+id/button8"
        android:layout_toRightOf="@id/button8"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/snooze"
        android:text="Snooze"
        android:textColor="#ffffff"
        android:id="@+id/snooze_btn"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button9"
        android:layout_below="@+id/button8"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:id="@+id/confirm_btn"
        android:text="Confirm"
        android:textColor="#ffffff"
        android:background="@drawable/confirm"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:id="@+id/indication"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button2"
        android:layout_marginBottom="5dp"
        android:text = ""
        android:textSize="32dp"
        android:gravity="center"/>

</RelativeLayout>
