<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm"
            android:id="@+id/set_clock_confirm_button"
            android:layout_marginTop="53dp"
            android:layout_marginLeft="67dp"
            android:layout_marginStart="67dp"
            android:layout_below="@+id/timePicker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/set_clock_cancel_button"
            android:layout_alignTop="@+id/set_clock_confirm_button"
            android:layout_toRightOf="@+id/set_clock_confirm_button"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
</RelativeLayout>