...
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <ImageButton
    android:id="@+id/btn_add_clock"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_add_alarm"
    android:layout_centerInParent="true"
    android:layout_alignParentLeft="true"
    android:background="@android:color/transparent"/>
...
